edit ecv notebook

--- a/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
+++ b/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
@@ -25,7 +25,10 @@
    "outputs": [],
    "source": [
     "ecv_store = \"s3://edh-root/more-era5/ecv-for-climate-change-1981-2010-anomaly-v0/\"\n",
-    "ds = xr.open_dataset(ecv_store, engine=\"zarr\")\n",
+    "ds = xr.open_dataset(\n",
+    "    ecv_store,\n",
+    "    engine=\"zarr\",\n",
+    ")\n",
     "ds"
    ]
   },
@@ -56,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_month = \"2024-12\""
+    "year_month = \"2025-09\""
    ]
   },
   {
@@ -178,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_ecv = xr.merge([ds_ecv_0, ds_ecv_6])\n",
+    "ds_ecv = xr.merge([ds_ecv_0, ds_ecv_6]).drop_vars([\"number\", \"surface\"])\n",
     "ds_ecv"
    ]
   },
@@ -193,13 +196,23 @@
     "# uncommento to UPDATE PRODUCTION!\n",
     "#\n",
     "\n",
-    "# ds_ecv.to_zarr(ecv_store, mode=\"a\", append_dim=\"valid_time\")"
+    "ds_ecv.to_zarr(ecv_store, mode=\"a\", append_dim=\"valid_time\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b3179bbe-8d9f-44d8-9981-360ba83c268e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!aws s3 ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "542dd1b8-eefc-4dc9-9f6a-e93d70d1fef4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -221,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
