Edit ecv ingestion notebook

--- a/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
+++ b/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
@@ -20,14 +20,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cca2eb-554e-4ef4-b153-03cadc0a865c",
+   "id": "f2042105-3b73-4149-80bb-380771f3b003",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "!uv pip list| grep aws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8419b14a-abf1-4881-936d-917c4091ef06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!aws s3 ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "577eb8df-8293-429e-8717-f117d8c0dc2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage_options = {\n",
+    "    \"key\": \"insert_EDH_AWS_ACCESS_KEY_ID_here\",\n",
+    "    \"secret\": \"insert_EDH_AWS_SECRET_ACCESS_KEY_here\"\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01cca2eb-554e-4ef4-b153-03cadc0a865c",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ecv_store = \"s3://edh-root/more-era5/ecv-for-climate-change-1981-2010-anomaly-v0/\"\n",
     "ds = xr.open_dataset(\n",
     "    ecv_store,\n",
     "    engine=\"zarr\",\n",
+    "    storage_options = storage_options\n",
     ")\n",
     "ds"
    ]
@@ -59,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_month = \"2025-09\""
+    "year_month = \"2025-10\""
    ]
   },
   {
@@ -94,16 +130,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5000c3-db83-427b-9716-3db2ef10c292",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client = cdsapi.Client()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "966edf42-ada0-4330-8fa2-7260da1d6740",
    "metadata": {},
    "outputs": [],
@@ -120,8 +146,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf90d9b1-30cb-436c-9fb1-bbb5dbbea347",
+   "id": "ec5000c3-db83-427b-9716-3db2ef10c292",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = cdsapi.Client()\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a7609a-0e13-4fb9-8d65-4d01fb00665f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdd32397-1206-45bd-a7a2-898e4855ad58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_month_request | {\"variable\": ecv_0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe9d08a8-1dfe-409a-b211-9f69cfc5a395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_0 + \".zip\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf90d9b1-30cb-436c-9fb1-bbb5dbbea347",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "result = client.retrieve(dataset, year_month_request | {\"variable\": ecv_0}, target=target_0 + \".zip\")\n",
@@ -195,27 +264,28 @@
     "#\n",
     "# uncommento to UPDATE PRODUCTION!\n",
     "#\n",
-    "\n",
-    "ds_ecv.to_zarr(ecv_store, mode=\"a\", append_dim=\"valid_time\")"
+    "'''\n",
+    "ds_ecv.to_zarr(\n",
+    "    ecv_store, mode=\"a\", \n",
+    "    append_dim=\"valid_time\",\n",
+    "    storage_options = storage_options\n",
+    ")\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3179bbe-8d9f-44d8-9981-360ba83c268e",
+   "id": "caacf593-1a0c-430c-a371-d55cece1ca03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!aws s3 ls"
+    "xr.open_dataset(\n",
+    "    ecv_store,\n",
+    "    engine=\"zarr\",\n",
+    "    storage_options = storage_options\n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "542dd1b8-eefc-4dc9-9f6a-e93d70d1fef4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
