ecv notebook will use ecmwf.datastores Client insted of cdsapi

--- a/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
+++ b/catalogue/era5/ecv-for-climate-change/ingestion/update-one-month.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import os\n",
     "\n",
-    "import cdsapi\n",
+    "from ecmwf.datastores import Client\n",
     "import xarray as xr\n",
     "\n",
     "_ = xr.set_options(keep_attrs=True)\n",
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip list| grep aws"
+    "#!uv pip list| grep aws"
    ]
   },
   {
@@ -44,9 +44,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Fill this\n",
     "storage_options = {\n",
-    "    \"key\": \"put_edh_aws_key_here\",\n",
-    "    \"secret\": \"put_edh_aws_secret_here\"\n",
+    "    \"key\": \"***\",\n",
+    "    \"secret\": \"***\"\n",
     "    }"
    ]
   },
@@ -95,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year_month = \"2025-11\""
+    "year_month = \"2026-01\""
    ]
   },
   {
@@ -150,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = cdsapi.Client()\n",
+    "client = Client()\n",
     "client"
    ]
   },
@@ -284,14 +285,6 @@
     "    storage_options = storage_options\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "100a42e3-0b97-430c-b738-7c8f03d1a70c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
